--- a/_output.yml
+++ b/_output.yml
@@ -2,15 +2,15 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="https://twitter.com/InfiniteGwei/"><center>Community Building Playbook</center></a></li>
+        <li><a href="https://Drepute.github.io/playbook/"><center>Community Building Playbook</center></a></li>
       after: |
-        <li><a href="https://twitter.com/InfiniteGwei/"><i>Maintained by infi</i> 😄</a>
-        <a href="https://github.com/rstudio/bookdown"><i>Published using bookdown</i> 📕</a></li>
+        <li><a href="https://twitter.com/InfiniteGwei/"><i>Maintained by Infi</i> 😄</a></li>
+        <li><a href="https://github.com/rstudio/bookdown"><i>Published using bookdown</i> 📕</a></li>
       collapse: section
       scroll_highlight: true
     toolbar:
       position: null
-    edit: https://github.com/InfiniteGwei/playbook/edit/%s
+    edit: https://github.com/Drepute/playbook/edit/%s
     download: null
     search:
       engine: lunr
