--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -40,6 +40,8 @@ jobs:
         shell: Rscript {0}
       - name: before_script
         run: |
-          chmod +x "_build.sh"
-          chmod +x "_deploy.sh"
+          chmod +x build.sh
+          chmod +x deploy.sh
+          build.sh
+          deploy.sh
         shell: Rscript {0}
