--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -40,8 +40,6 @@ jobs:
         shell: Rscript {0}
       - name: before_script
         run: |
-          chmod +x build.sh
-          chmod +x deploy.sh
-          build.sh
-          deploy.sh
+          ./build.sh
+          ./deploy.sh
         shell: Rscript {0}
