--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -40,6 +40,6 @@ jobs:
         shell: Rscript {0}
       - name: before_script
         run: |
-          /build.sh
-          /deploy.sh
+          build.sh
+          deploy.sh
         shell: Rscript {0}
