--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -32,7 +32,7 @@ jobs:
           restore-keys: bookdown-
 
       - name: Build site
-        run: bookdown::render_book("index.rmd", "bookdown::gitbook")
+        run: bookdown::render_book("index.rmd", quiet = TRUE)
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
