--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -31,8 +31,14 @@ jobs:
           key: bookdown-${{ hashFiles('**/*rmd') }}
           restore-keys: bookdown-
 
+      - name: Install bookdown
+        run: Rscript -e "install.packages('bookdown', repos = 'http://cran.us.r-project.org')"
+
+      - name: Install rmarkdown
+        run: Rscript -e "install.packages('rmarkdown', repos = 'http://cran.us.r-project.org')"
+
       - name: Build site
-        run: bookdown::render_book("index.rmd", quiet = TRUE)
+        run: bookdown::render_book("index.rmd", "bookdown::gitbook")
         shell: Rscript {0}
 
       - name: Deploy to GitHub pages 🚀
