--- a/_output.yml
+++ b/_output.yml
@@ -3,7 +3,7 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="https://Drepute.github.io/playbook/"><center>Community Building Playbook</center></a></li>
+        <li><a href="https://Drepute.github.io/playbook-ru/"><center>Community Building Playbook</center></a></li>
       after: |
         <li><a href="https://twitter.com/InfiniteGwei/"><i>Maintained by Infi</i> 😄</a></li>
         <li><a href="https://github.com/rstudio/bookdown"><i>Published using bookdown</i> 📕</a></li>
@@ -11,7 +11,7 @@ bookdown::gitbook:
       scroll_highlight: true
     toolbar:
       position: null
-    edit: https://github.com/Drepute/playbook/edit/main/%s
+    edit: https://github.com/Drepute/playbook-ru/edit/main/%s
     download: null
     search:
       engine: lunr
